<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.ui.fragments.SettingsFragment">

    <ImageView
        android:id="@+id/ic_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_12"
        android:layout_marginTop="@dimen/spacing_32"

        android:src="@drawable/ic_settings"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_24"
        android:layout_marginTop="@dimen/spacing_48"

        android:fontFamily="@font/rubik_mono_one_regular"
        android:text="@string/txt_title"
        android:textColor="@color/black"
        android:textSize="@dimen/fonts_headline"

        app:layout_constraintStart_toEndOf="@id/ic_settings"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/spacing_12"

        app:dividerColor="@color/black"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_out"/>

    <TextView
        android:id="@+id/btn_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_12"
        android:layout_marginBottom="@dimen/spacing_20"

        android:fontFamily="@font/rubik_mono_one_regular"
        android:text="@string/txt_sign_out"
        android:textColor="@color/black"
        android:textSize="@dimen/fonts_text"

        android:clickable="true"
        android:focusable="true"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_delete_account"/>

    <TextView
        android:id="@+id/btn_delete_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_12"
        android:layout_marginBottom="@dimen/spacing_12"

        android:clickable="true"
        android:focusable="true"

        android:fontFamily="@font/rubik_mono_one_regular"
        android:text="@string/txt_delete_account"
        android:textColor="@color/red"
        android:textSize="@dimen/fonts_text"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>